--- a/package.json
+++ b/package.json
@@ -1,31 +1,27 @@
 {
-  "name": "dootstrapper",
+  "name": "packages",
   "version": "0.1.0",
-  "bin": {
-    "dootstrapper": "bin/dootstrapper.js"
-  },
-  "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "test": "jest",
-    "cdk": "cdk",
-    "format:check": "prettier --check ./**/*.ts",
-    "format:write": "prettier --write ./**/*.ts"
-  },
+  "private": true,
   "devDependencies": {
-    "@aws-cdk/assert": "^1.18.0",
-    "@types/jest": "^24.0.22",
+    "@bazel/bazel": "latest",
+    "@bazel/buildifier": "latest",
+    "@bazel/ibazel": "latest",
+    "@bazel/jasmine": "^0.42.3",
+    "@bazel/typescript": "^0.41.0",
+    "@types/jasmine": "^3.5.0",
     "@types/node": "10.17.5",
-    "aws-cdk": "^1.18.0",
-    "jest": "^24.9.0",
+    "jasmine": "^3.5.0",
     "prettier": "^1.19.1",
-    "ts-jest": "^24.1.0",
-    "ts-node": "^8.1.0",
     "tslint": "^5.20.1",
     "typescript": "~3.7.2"
   },
   "dependencies": {
-    "@aws-cdk/core": "^1.18.0",
-    "source-map-support": "^0.5.16"
+    "@aws-cdk/core": "^1.18.0"
+  },
+  "scripts": {
+    "build": "bazel build //...",
+    "test": "bazel test //...",
+    "format:check": "prettier --check ./**/*.ts",
+    "format:write": "prettier --write ./**/*.ts"
   }
 }
