--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "typescript": "~3.7.2"
   },
   "dependencies": {
+    "@aws-cdk/aws-cloudtrail": "^1.18.0",
+    "@aws-cdk/aws-codebuild": "^1.18.0",
+    "@aws-cdk/aws-codepipeline": "^1.18.0",
+    "@aws-cdk/aws-codepipeline-actions": "^1.18.0",
     "@aws-cdk/aws-s3": "^1.18.0",
     "@aws-cdk/core": "^1.18.0"
   },
