--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@aws-cdk/aws-codebuild": "^1.18.0",
     "@aws-cdk/aws-codepipeline": "^1.18.0",
     "@aws-cdk/aws-codepipeline-actions": "^1.18.0",
+    "@aws-cdk/aws-events": "^1.18.0",
+    "@aws-cdk/aws-events-targets": "^1.18.0",
     "@aws-cdk/aws-s3": "^1.18.0",
+    "@aws-cdk/aws-sns": "^1.18.0",
     "@aws-cdk/core": "^1.18.0"
   },
   "scripts": {
