--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@aws-cdk/aws-events-targets": "^1.18.0",
     "@aws-cdk/aws-s3": "^1.18.0",
     "@aws-cdk/aws-sns": "^1.18.0",
+    "@aws-cdk/aws-sns-subscriptions": "^1.18.0",
     "@aws-cdk/core": "^1.18.0"
   },
   "scripts": {
