--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@aws-cdk/aws-s3": "^1.18.0",
     "@aws-cdk/aws-sns": "^1.18.0",
     "@aws-cdk/aws-sns-subscriptions": "^1.18.0",
-    "@aws-cdk/core": "^1.18.0"
+    "@aws-cdk/core": "^1.18.0",
+    "change-case": "^4.1.0"
   },
   "scripts": {
     "build": "bazel build //...",
