--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -6,6 +6,7 @@ exports_files(
         "tsconfig.json",
         "package.json",
         "package-lock.json",
+        "rollup.config.js"
     ],
     visibility = ["//visibility:public"],
 )
