--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "@bazel/jasmine": "^0.42.3",
     "@bazel/typescript": "^0.41.0",
     "@types/jasmine": "^3.5.0",
+    "@bazel/rollup": "^0.40.0",
     "@types/node": "10.17.5",
     "jasmine": "^3.5.0",
     "prettier": "^1.19.1",
     "tslint": "^5.20.1",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "rollup": "^1.27.3",
+    "rollup-plugin-auto-external": "^2.0.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-resolve": "^5.2.0"
   },
   "dependencies": {
     "@aws-cdk/aws-cloudtrail": "^1.18.0",
@@ -27,12 +33,15 @@
     "@aws-cdk/aws-sns": "^1.18.0",
     "@aws-cdk/aws-sns-subscriptions": "^1.18.0",
     "@aws-cdk/core": "^1.18.0",
+    "aws-cdk": "^1.18.0",
     "change-case": "^4.1.0"
   },
   "scripts": {
     "build": "bazel build //...",
     "test": "bazel test //...",
     "format:check": "prettier --check ./**/*.ts",
-    "format:write": "prettier --write ./**/*.ts"
+    "format:write": "prettier --write ./**/*.ts",
+    "synth": "cdk synth",
+    "deploy": "cdk deploy"
   }
 }
