--- a/package.json
+++ b/package.json
@@ -3,42 +3,45 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "@aws-cdk/assert": "^1.18.0",
+    "@aws-cdk/assert": "^1.19.0",
     "@bazel/bazel": "latest",
     "@bazel/buildifier": "latest",
     "@bazel/ibazel": "latest",
-    "@bazel/jasmine": "^0.42.3",
-    "@bazel/typescript": "^0.41.0",
+    "@bazel/jasmine": "^1.0.0",
+    "@bazel/typescript": "^1.0.0",
     "@types/jasmine": "^3.5.0",
-    "@bazel/rollup": "^0.40.0",
-    "@types/node": "10.17.5",
+    "@bazel/rollup": "^1.0.0",
+    "@types/node": "12.12.21",
     "jasmine": "^3.5.0",
     "prettier": "^1.19.1",
     "tslint": "^5.20.1",
-    "typescript": "~3.7.2",
-    "rollup": "^1.27.3",
+    "typescript": "~3.7.4",
+    "rollup": "^1.27.13",
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^5.2.0"
   },
   "dependencies": {
-    "@aws-cdk/aws-cloudtrail": "^1.18.0",
-    "@aws-cdk/aws-codebuild": "^1.18.0",
-    "@aws-cdk/aws-codepipeline": "^1.18.0",
-    "@aws-cdk/aws-codepipeline-actions": "^1.18.0",
-    "@aws-cdk/aws-events": "^1.18.0",
-    "@aws-cdk/aws-events-targets": "^1.18.0",
-    "@aws-cdk/aws-s3": "^1.18.0",
-    "@aws-cdk/aws-sns": "^1.18.0",
-    "@aws-cdk/aws-sns-subscriptions": "^1.18.0",
-    "@aws-cdk/core": "^1.18.0",
-    "aws-cdk": "^1.18.0",
-    "change-case": "^4.1.0"
+    "@aws-cdk/aws-cloudtrail": "^1.19.0",
+    "@aws-cdk/aws-codebuild": "^1.19.0",
+    "@aws-cdk/aws-codepipeline": "^1.19.0",
+    "@aws-cdk/aws-codepipeline-actions": "^1.19.0",
+    "@aws-cdk/aws-events": "^1.19.0",
+    "@aws-cdk/aws-events-targets": "^1.19.0",
+    "@aws-cdk/aws-iam": "^1.19.0",
+    "@aws-cdk/aws-s3": "^1.19.0",
+    "@aws-cdk/aws-sns": "^1.19.0",
+    "@aws-cdk/aws-sns-subscriptions": "^1.19.0",
+    "@aws-cdk/aws-ssm": "^1.19.0",
+    "@aws-cdk/core": "^1.19.0",
+    "aws-cdk": "^1.19.0",
+    "change-case": "^4.1.1"
   },
   "scripts": {
     "build": "bazel build //...",
     "test": "bazel test //...",
+    "test:watch": "ibazel test //...",
     "format:check": "prettier --check ./**/*.ts",
     "format:write": "prettier --write ./**/*.ts",
     "synth": "cdk synth",
