--- a/package.json
+++ b/package.json
@@ -8,19 +8,21 @@
     "@bazel/buildifier": "latest",
     "@bazel/ibazel": "latest",
     "@bazel/jasmine": "^1.0.0",
+    "@bazel/rollup": "^1.0.0",
     "@bazel/typescript": "^1.0.0",
     "@types/jasmine": "^3.5.0",
-    "@bazel/rollup": "^1.0.0",
     "@types/node": "12.12.21",
     "jasmine": "^3.5.0",
     "prettier": "^1.19.1",
-    "tslint": "^5.20.1",
-    "typescript": "~3.7.4",
     "rollup": "^1.27.13",
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-resolve": "^5.2.0"
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "tslint": "^5.20.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.1.0",
+    "typescript": "~3.7.4"
   },
   "dependencies": {
     "@aws-cdk/aws-cloudtrail": "^1.19.0",
@@ -45,6 +47,7 @@
     "format:check": "prettier --check ./**/*.ts",
     "format:write": "prettier --write ./**/*.ts",
     "synth": "cdk synth",
-    "deploy": "cdk deploy"
+    "deploy": "cdk deploy",
+    "lint": "tslint --project ./"
   }
 }
