--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
     "strictPropertyInitialization": false,
     "typeRoots": ["./node_modules/@types"]
   },
-  "exclude": ["cdk.out"]
+  "exclude": ["cdk.out", "dist", "bazel-out", "node_modules"]
 }
