--- a/tslint.yml
+++ b/tslint.yml
@@ -1,5 +1,4 @@
 extends:
-  - 'tslint:recommended'
   - 'tslint-plugin-prettier'
   - 'tslint-config-prettier'
 
@@ -8,6 +7,7 @@ rules:
   max-line-length:
     options: [120]
   new-parens: true
+  interface-name: true
   no-arg: true
   no-bitwise: true
   no-conditional-assignment: true
