--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,12 +1,34 @@
-# Add rules here to build your software
-# See https://docs.bazel.build/versions/master/build-ref.html#BUILD_files
+package(default_visibility = ["//visibility:public"])
+
+load("@npm_bazel_typescript//:index.bzl", "ts_library")
+load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")
 
 exports_files(
     [
-        "tsconfig.json",
         "package.json",
         "package-lock.json",
-        "rollup.config.js"
+    ],)
+
+ts_library(
+    name = "library",
+    srcs = glob(
+        [
+            "index.ts",
+        ],
+        exclude = ["**/*.spec.ts"],
+    ),
+    tsconfig = "//:tsconfig.json",
+    deps = [
+        "//resources:library",
+        "//handlers:library",
+        "@npm//:node_modules",
     ],
-    visibility = ["//visibility:public"],
+)
+
+pkg_npm(
+    name = "doostrapper",
+    srcs = ["package.json"],
+    deps = [
+    ":library",
+    ],
 )
