--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -27,7 +27,7 @@ ts_library(
 
 pkg_npm(
     name = "doostrapper",
-    srcs = ["package.json"],
+    srcs = ["package.json","README.md"],
     deps = [
     ":library",
     ],
