chore: add missing NPM_TOKEN environment to gh-actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,8 @@ on: [push]
 
 jobs:
   build:
+    env:
+      NPM_TOKEN: SECRET_NPM_TOKEN
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
