--- a/example/resources/BUILD
+++ b/example/resources/BUILD
@@ -1,12 +1,12 @@
 load("//:index.bzl", "setup_ts_build", "setup_ts_specs")
 
 setup_ts_build(
-  name = "library"
+    name = "library",
 )
 
 setup_ts_specs(
-  name = "test",
-  deps = [
-    ":library"
-  ]
+    name = "test",
+    deps = [
+        ":library",
+    ],
 )
