--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "publish": "bazel run //package:doostrapper.publish",
     "build:watch": "ibazel build //...",
     "test:watch": "ibazel test //...",
+    "bazel:format": "find . -type f \\( -name \"*.bzl\" -or -name WORKSPACE -or -name BUILD -or -name BUILD.bazel \\) ! -path \"*/node_modules/*\" | xargs buildifier -v --warnings=attr-cfg,attr-license,attr-non-empty,attr-output-default,attr-single-file,constant-glob,ctx-actions,ctx-args,depset-iteration,depset-union,dict-concatenation,duplicated-name,filetype,git-repository,http-archive,integer-division,load,load-on-top,native-build,native-package,out-of-order-load,output-group,package-name,package-on-top,positional-args,redefined-variable,repository-name,same-origin-load,string-iteration,unsorted-dict-items,unused-variable",
+    "bazel:lint": "npm run bazel:format -- --lint=warn",
+    "bazel:lint-fix": "npm run bazel:format -- --lint=fix",
     "format:check": "prettier --check ./**/*.ts",
     "format:write": "prettier --write ./**/*.ts",
     "synth": "cdk synth",
