--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@bazel/typescript": "^1.3.0",
     "@types/jasmine": "^3.5.3",
     "@types/node": "13.7.1",
+    "husky": "^4.2.3",
     "jasmine": "^3.5.0",
     "prettier": "^1.19.1",
     "rollup": "^1.31.0",
@@ -74,5 +75,11 @@
     "@aws-cdk/aws-ssm": "^1.23.0",
     "@aws-cdk/core": "^1.23.0",
     "change-case": "^4.1.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
