init example app

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "doostrapper",
+  "name": "doostrapper-workspace",
   "description": "Multi environment deployment Constructs App",
   "main": "index.js",
   "private": true,
@@ -41,6 +41,7 @@
     "typescript": "~3.7.5"
   },
   "scripts": {
+    "cdk": "cdk",
     "build": "bazel build //...",
     "check": "bazel version",
     "test": "bazel test //...",
@@ -74,7 +75,9 @@
     "@aws-cdk/aws-sns-subscriptions": "^1.23.0",
     "@aws-cdk/aws-ssm": "^1.23.0",
     "@aws-cdk/core": "^1.23.0",
-    "change-case": "^4.1.1"
+    "aws-cdk": "^1.23.0",
+    "change-case": "^4.1.1",
+    "doostrapper": "^0.1.8-alpha.0"
   },
   "husky": {
     "hooks": {
