chore: move index.bzl to tools/defaults.bzl

--- a/package/handlers/BUILD
+++ b/package/handlers/BUILD
@@ -1,6 +1,6 @@
 package(default_visibility = ["//visibility:public"])
 
-load("//:index.bzl", "setup_ts_build", "setup_ts_specs")
+load("//:tools/defaults.bzl", "setup_ts_build", "setup_ts_specs")
 
 setup_ts_build(
     name = "library",
