--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -5,5 +5,6 @@ exports_files(
         "package.json",
         "package-lock.json",
         "tsconfig.json",
+        "rollup.config.js",
     ],
 )
