--- a/example/resources/BUILD
+++ b/example/resources/BUILD
@@ -1,4 +1,4 @@
-load("//:index.bzl", "setup_ts_build", "setup_ts_specs")
+load("//:tools/defaults.bzl", "gen_bundle", "setup_ts_build", "setup_ts_specs")
 
 setup_ts_build(
     name = "library",
@@ -6,6 +6,14 @@ setup_ts_build(
 
 setup_ts_specs(
     name = "specs",
+    deps = [
+        ":library",
+    ],
+)
+
+gen_bundle(
+    name = "example",
+    dir_name = "resources",
     deps = [
         ":library",
     ],
