--- a/package/BUILD.bazel
+++ b/package/BUILD.bazel
@@ -1,7 +1,7 @@
 package(default_visibility = ["//visibility:public"])
 
 load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")
-load("//:index.bzl", "setup_ts_build")
+load("//:tools/defaults.bzl", "setup_ts_build")
 
 exports_files(
     [
