--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "doostrapper",
-  "description": "Multi environment deployment Constructs App",
+  "version": "0.1.8-alpha.0",
+  "description": "Multi environment deployment boostrapper",
   "main": "index.js",
-  "private": true,
   "engineStrict": true,
   "engines": {
     "node": ">=10.15 <12.14"
@@ -13,9 +13,12 @@
   },
   "homepage": "https://github.com/whimzyLive/doostrapper/blob/master/README.md",
   "keywords": [
+    "aws",
     "aws-cdk",
-    "aws-cdk-deployment",
-    "aws-cdk-boostrapper"
+    "Boostrapper",
+    "CD",
+    "Continuous Delivery",
+    "Continuous Deployment"
   ],
   "devDependencies": {
     "@aws-cdk/assert": "^1.23.0",
@@ -40,15 +43,16 @@
     "tslint-plugin-prettier": "^2.1.0",
     "typescript": "~3.7.5"
   },
+  "license": "MIT",
   "scripts": {
-    "build": "bazel build //...",
+    "build": "bazel build ${TARGET:-//...}",
     "check": "bazel version",
     "test": "bazel test //...",
     "install:all": "bazel run @nodejs//:npm_node_repositories install",
     "add-dep": "bazel run @nodejs//:npm_node_repositories install",
     "pack": "bazel run //package:doostrapper.pack",
     "publish": "bazel run //package:doostrapper.publish",
-    "build:watch": "ibazel build //...",
+    "build:watch": "ibazel build ${TARGET:-//...}.",
     "test:watch": "ibazel test //...",
     "bazel:format": "find . -type f \\( -name \"*.bzl\" -or -name WORKSPACE -or -name BUILD -or -name BUILD.bazel \\) ! -path \"*/node_modules/*\" | xargs buildifier -v --warnings=attr-cfg,attr-license,attr-non-empty,attr-output-default,attr-single-file,constant-glob,ctx-actions,ctx-args,depset-iteration,depset-union,dict-concatenation,duplicated-name,filetype,git-repository,http-archive,integer-division,load,load-on-top,native-build,native-package,out-of-order-load,output-group,package-name,package-on-top,positional-args,redefined-variable,repository-name,same-origin-load,string-iteration,unsorted-dict-items,unused-variable",
     "bazel:lint": "npm run bazel:format -- --lint=warn",
