--- a/package.json
+++ b/package.json
@@ -48,10 +48,8 @@
     "build": "bazel build ${TARGET:-//...}",
     "check": "bazel version",
     "test": "bazel test //...",
-    "install:all": "bazel run @nodejs//:npm_node_repositories install",
-    "add-dep": "bazel run @nodejs//:npm_node_repositories install",
-    "pack": "bazel run //package:doostrapper.pack",
-    "publish": "bazel run //package:doostrapper.publish",
+    "pack": "bazel run //:doostrapper.pack",
+    "publish": "bazel run //:doostrapper.publish",
     "build:watch": "ibazel build ${TARGET:-//...}.",
     "test:watch": "ibazel test //...",
     "bazel:format": "find . -type f \\( -name \"*.bzl\" -or -name WORKSPACE -or -name BUILD -or -name BUILD.bazel \\) ! -path \"*/node_modules/*\" | xargs buildifier -v --warnings=attr-cfg,attr-license,attr-non-empty,attr-output-default,attr-single-file,constant-glob,ctx-actions,ctx-args,depset-iteration,depset-union,dict-concatenation,duplicated-name,filetype,git-repository,http-archive,integer-division,load,load-on-top,native-build,native-package,out-of-order-load,output-group,package-name,package-on-top,positional-args,redefined-variable,repository-name,same-origin-load,string-iteration,unsorted-dict-items,unused-variable",
