--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "@aws-cdk/core": "^1.23.0",
     "aws-cdk": "^1.23.0",
     "change-case": "^4.1.1",
-    "doostrapper": "^0.1.8-alpha.0"
+    "dootstrapper": "^0.1.8-alpha.1"
   },
   "husky": {
     "hooks": {
