chore: replace static version with placeholder

--- a/package/BUILD.bazel
+++ b/package/BUILD.bazel
@@ -29,7 +29,5 @@ pkg_npm(
     substitutions = {
         "dootstrapper/package": "dootstrapper",
     },
-    deps = [
-        ":library",
-    ],
+    replace_with_version = "0.0.0-PLACEHOLDER",
 )
