--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,4 +15,6 @@ jobs:
       - name: install
         run: npm install
       - name: Publish To NPM
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npm run publish -- --config=release
