--- a/package/package.json
+++ b/package/package.json
@@ -23,7 +23,10 @@
     "change-case": "^4.1.1"
   },
   "peerDependencies": {
+    "@aws-cdk/aws-certificatemanager": "^1.23.0",
+    "@aws-cdk/aws-cloudfront": "^1.23.0",
     "@aws-cdk/aws-cloudtrail": "^1.23.0",
+    "@aws-cdk/aws-route53": "^1.23.0",
     "@aws-cdk/aws-codebuild": "^1.23.0",
     "@aws-cdk/aws-codepipeline": "^1.23.0",
     "@aws-cdk/aws-codepipeline-actions": "^1.23.0",
