--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.1.0",
+    "typedoc": "^0.16.11",
+    "typedoc-plugin-no-inherit": "^1.1.10",
     "typescript": "~3.7.5"
   },
   "scripts": {
