docs: update readme

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "check": "bazel version",
     "test": "bazel test //...",
     "install:all": "bazel run @nodejs//:npm_node_repositories install",
+    "build:docs": "typedoc",
     "pack": "bazel run //package:dootstrapper.pack",
     "publish": "bazel run //package:dootstrapper.publish",
     "build:watch": "ibazel build //...",
