--- a/package/package.json
+++ b/package/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "https://github.com/nextfaze/dootstrapper"
   },
-  "homepage": "https://github.com/nextfaze/dootstrapper/blob/master/package/README.md",
+  "homepage": "https://nextfaze.github.io/dootstrapper",
   "keywords": [
     "aws",
     "nextfaze",
