--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@bazel/jasmine": "^1.3.0",
     "@bazel/rollup": "^1.3.0",
     "@bazel/typescript": "^1.3.0",
+    "@types/aws-lambda": "^8.10.51",
     "@types/jasmine": "^3.5.3",
     "@types/node": "13.7.1",
+    "aws-sdk": "^2.665.0",
     "husky": "^4.2.3",
     "jasmine": "^3.5.0",
     "prettier": "^1.19.1",
@@ -68,12 +70,14 @@
     "@aws-cdk/aws-events": "^1.23.0",
     "@aws-cdk/aws-events-targets": "^1.23.0",
     "@aws-cdk/aws-iam": "^1.23.0",
+    "@aws-cdk/aws-lambda": "^1.23.0",
     "@aws-cdk/aws-route53": "^1.23.0",
     "@aws-cdk/aws-s3": "^1.23.0",
     "@aws-cdk/aws-sns": "^1.23.0",
     "@aws-cdk/aws-sns-subscriptions": "^1.23.0",
     "@aws-cdk/aws-ssm": "^1.23.0",
     "@aws-cdk/core": "^1.23.0",
+    "@slack/web-api": "^5.8.0",
     "aws-cdk": "^1.23.0",
     "change-case": "^4.1.1"
   },
