--- a/package/handlers/BUILD
+++ b/package/handlers/BUILD
@@ -1,6 +1,9 @@
-package(default_visibility = ["//visibility:public"])
-
+load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")
 load("//:tools/defaults.bzl", "setup_ts_build", "setup_ts_specs")
+load("@rules_pkg//:pkg.bzl", "pkg_tar")
+
+
+package(default_visibility = ["//visibility:public"])
 
 setup_ts_build(
     name = "library",
@@ -11,4 +14,25 @@ setup_ts_specs(
     deps = [
         ":library",
     ],
+)
+
+rollup_bundle(
+    name = "bundle",
+    config_file = "rollup.config.js",
+    entry_point = ":index.ts",
+    format = "cjs",
+    deps = [
+        ":library",
+    ],
+)
+
+pkg_tar(
+    name = "handlers",
+    srcs = [
+        ":bundle",
+        "//package:package.json",
+        "//package:package-lock.json"
+    ],
+    extension = "tar.gz",
+    package_dir = "handlers",
 )
