--- a/package/package.json
+++ b/package/package.json
@@ -23,6 +23,9 @@
     "change-case": "^4.1.1",
     "@slack/web-api": "^5.8.0"
   },
+  "scripts": {
+    "postinstall": "cp -r node_modules ./handlers"
+  },
   "peerDependencies": {
     "@aws-cdk/aws-certificatemanager": "^1.23.0",
     "@aws-cdk/aws-cloudfront": "^1.23.0",
