--- a/package/resources/BUILD
+++ b/package/resources/BUILD
@@ -1,9 +1,9 @@
-package(default_visibility = ["//visibility:public"])
-
 load("//:tools/defaults.bzl", "setup_ts_build", "setup_ts_specs")
 
+package(default_visibility = ["//visibility:public"])
+
 setup_ts_build(
-    name = "library"
+    name = "library",
 )
 
 setup_ts_specs(
