--- a/tslint.yml
+++ b/tslint.yml
@@ -1,4 +1,5 @@
 extends:
+  - 'tslint-eslint-rules-recommended'
   - 'tslint-plugin-prettier'
   - 'tslint-config-prettier'
 
@@ -10,6 +11,7 @@ rules:
   interface-name: true
   no-arg: true
   no-bitwise: true
+  no-unused-variable: false
   no-conditional-assignment: true
   no-consecutive-blank-lines: false
   no-console:
