feat(package): wip update deps to latest

--- a/package.json
+++ b/package.json
@@ -13,32 +13,36 @@
   },
   "homepage": "https://github.com/nextfaze/dootstrapper/blob/master/README.md",
   "devDependencies": {
-    "@aws-cdk/assert": "^1.23.0",
-    "@bazel/bazel": "^2.0.1",
-    "@bazel/buildifier": "^2.2.1",
-    "@bazel/ibazel": "^0.12.3",
-    "@bazel/jasmine": "^1.3.0",
-    "@bazel/rollup": "^1.3.0",
-    "@bazel/typescript": "^1.3.0",
-    "@types/aws-lambda": "^8.10.51",
-    "@types/jasmine": "^3.5.10",
-    "@types/node": "13.7.1",
-    "aws-sdk": "^2.665.0",
-    "husky": "^4.2.3",
+    "@aws-cdk/assert": "^1.46.0",
+    "@bazel/bazel": "^2.1.0",
+    "@bazel/buildifier": "^3.2.1",
+    "@bazel/ibazel": "^0.13.1",
+    "@bazel/jasmine": "^1.7.0",
+    "@bazel/rollup": "^1.7.0",
+    "@bazel/typescript": "^1.7.0",
+    "@commitlint/cli": "^9.0.1",
+    "@commitlint/config-conventional": "^9.0.1",
+    "@types/aws-lambda": "^8.10.56",
+    "@types/jasmine": "^3.5.11",
+    "@types/node": "14.0.13",
+    "aws-sdk": "^2.702.0",
+    "commitlint": "^9.0.1",
+    "husky": "^4.2.5",
     "jasmine": "^3.5.0",
-    "prettier": "^1.19.1",
-    "rollup": "^1.31.0",
+    "prettier": "^2.0.5",
+    "pretty-quick": "^2.0.1",
+    "rollup": "^2.18.0",
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "tslint": "^6.0.0",
+    "tslint": "^6.1.2",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-eslint-rules-recommended": "^1.2.0",
-    "tslint-plugin-prettier": "^2.1.0",
-    "typedoc": "^0.16.11",
+    "tslint-eslint-rules-recommended": "^1.2.2",
+    "tslint-plugin-prettier": "^2.3.0",
+    "typedoc": "^0.17.7",
     "typedoc-plugin-no-inherit": "^1.1.10",
-    "typescript": "~3.7.5"
+    "typescript": "~3.9.5"
   },
   "scripts": {
     "build": "bazel build ${TARGET:-//...}",
@@ -62,24 +66,24 @@
     "clean:deep": "bazel clean --expunge"
   },
   "dependencies": {
-    "@aws-cdk/aws-certificatemanager": "^1.23.0",
-    "@aws-cdk/aws-cloudfront": "^1.23.0",
-    "@aws-cdk/aws-cloudtrail": "^1.23.0",
-    "@aws-cdk/aws-codebuild": "^1.23.0",
-    "@aws-cdk/aws-codepipeline": "^1.23.0",
-    "@aws-cdk/aws-codepipeline-actions": "^1.23.0",
-    "@aws-cdk/aws-events": "^1.23.0",
-    "@aws-cdk/aws-events-targets": "^1.23.0",
-    "@aws-cdk/aws-iam": "^1.23.0",
-    "@aws-cdk/aws-lambda": "^1.23.0",
-    "@aws-cdk/aws-route53": "^1.23.0",
-    "@aws-cdk/aws-s3": "^1.23.0",
-    "@aws-cdk/aws-sns": "^1.23.0",
-    "@aws-cdk/aws-sns-subscriptions": "^1.23.0",
-    "@aws-cdk/aws-ssm": "^1.23.0",
-    "@aws-cdk/core": "^1.23.0",
-    "@slack/web-api": "^5.8.0",
-    "aws-cdk": "^1.23.0",
+    "@aws-cdk/aws-certificatemanager": "^1.46.0",
+    "@aws-cdk/aws-cloudfront": "^1.46.0",
+    "@aws-cdk/aws-cloudtrail": "^1.46.0",
+    "@aws-cdk/aws-codebuild": "^1.46.0",
+    "@aws-cdk/aws-codepipeline": "^1.46.0",
+    "@aws-cdk/aws-codepipeline-actions": "^1.46.0",
+    "@aws-cdk/aws-events": "^1.46.0",
+    "@aws-cdk/aws-events-targets": "^1.46.0",
+    "@aws-cdk/aws-iam": "^1.46.0",
+    "@aws-cdk/aws-lambda": "^1.46.0",
+    "@aws-cdk/aws-route53": "^1.46.0",
+    "@aws-cdk/aws-s3": "^1.46.0",
+    "@aws-cdk/aws-sns": "^1.46.0",
+    "@aws-cdk/aws-sns-subscriptions": "^1.46.0",
+    "@aws-cdk/aws-ssm": "^1.46.0",
+    "@aws-cdk/core": "^1.46.0",
+    "@slack/web-api": "^5.10.0",
+    "aws-cdk": "^1.46.0",
     "change-case": "^4.1.1"
   },
   "husky": {
