--- a/package/package.json
+++ b/package/package.json
@@ -27,21 +27,22 @@
     "postinstall": "if [-d \"./handlers\"]; then cd ./handlers && npm i --prod; fi"
   },
   "peerDependencies": {
-    "@aws-cdk/aws-certificatemanager": "^1.23.0",
-    "@aws-cdk/aws-cloudfront": "^1.23.0",
-    "@aws-cdk/aws-cloudtrail": "^1.23.0",
-    "@aws-cdk/aws-codebuild": "^1.23.0",
-    "@aws-cdk/aws-codepipeline": "^1.23.0",
-    "@aws-cdk/aws-codepipeline-actions": "^1.23.0",
-    "@aws-cdk/aws-events": "^1.23.0",
-    "@aws-cdk/aws-events-targets": "^1.23.0",
-    "@aws-cdk/aws-iam": "^1.23.0",
-    "@aws-cdk/aws-route53": "^1.23.0",
-    "@aws-cdk/aws-s3": "^1.23.0",
-    "@aws-cdk/aws-sns": "^1.23.0",
-    "@aws-cdk/aws-sns-subscriptions": "^1.23.0",
-    "@aws-cdk/aws-ssm": "^1.23.0",
-    "@aws-cdk/aws-lambda": "^1.23.0",
-    "@aws-cdk/core": "^1.23.0"
+    "aws-cdk": "^1.46.0",
+    "@aws-cdk/aws-certificatemanager": "^1.46.0",
+    "@aws-cdk/aws-cloudfront": "^1.46.0",
+    "@aws-cdk/aws-cloudtrail": "^1.46.0",
+    "@aws-cdk/aws-codebuild": "^1.46.0",
+    "@aws-cdk/aws-codepipeline": "^1.46.0",
+    "@aws-cdk/aws-codepipeline-actions": "^1.46.0",
+    "@aws-cdk/aws-events": "^1.46.0",
+    "@aws-cdk/aws-events-targets": "^1.46.0",
+    "@aws-cdk/aws-iam": "^1.46.0",
+    "@aws-cdk/aws-route53": "^1.46.0",
+    "@aws-cdk/aws-s3": "^1.46.0",
+    "@aws-cdk/aws-sns": "^1.46.0",
+    "@aws-cdk/aws-sns-subscriptions": "^1.46.0",
+    "@aws-cdk/aws-ssm": "^1.46.0",
+    "@aws-cdk/aws-lambda": "^1.46.0",
+    "@aws-cdk/core": "^1.46.0"
   }
 }
