--- a/package/package.json
+++ b/package/package.json
@@ -20,8 +20,7 @@
   "module": "ES6",
   "license": "MIT",
   "dependencies": {
-    "change-case": "^4.1.1",
-    "@slack/web-api": "^5.8.0"
+    "change-case": "^4.1.1"
   },
   "peerDependencies": {
     "aws-cdk": "^1.46.0",
